<project>
  <modelVersion>4.0.0</modelVersion>
  <groupId>mygroupid</groupId>
  <artifactId>myartifactid</artifactId>
  <version>0.0-SNAPSHOT</version>
  <properties>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
  </properties>
  <dependencies>
    <dependency>
      <groupId>org.apache.poi</groupId>
      <artifactId>poi</artifactId>
      <version>5.3.0</version>
    </dependency>
    <dependency>
      <groupId>org.apache.poi</groupId>
      <artifactId>poi-ooxml</artifactId>
      <version>5.3.0</version>
    </dependency>
    <dependency>
      <groupId>org.apache.poi</groupId>
      <artifactId>poi-ooxml-schemas</artifactId>
      <version>4.1.2</version>
    </dependency>
    <dependency>
      <groupId>org.apache.xmlbeans</groupId>
      <artifactId>xmlbeans</artifactId>
      <version>5.1.1</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-collections4</artifactId>
      <version>4.4</version>
    </dependency>
    <dependency>
      <groupId>org.hibernate</groupId>
      <artifactId>hibernate-core</artifactId>
      <version>5.6.14.Final</version>
    </dependency>
    <dependency>
      <groupId>com.h2database</groupId>
      <artifactId>h2</artifactId>
      <version>2.1.214</version>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <version>2.20.0</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.openjfx/javafx -->
    <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx</artifactId>
        <version>24-ea+5</version>
        <type>pom</type>
    </dependency>

    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>24-ea+5</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-fxml</artifactId>
      <version>24-ea+5</version>
    </dependency>
  </dependencies>
  <build>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.1</version>
          <configuration>
            <source>${maven.compiler.source}</source>
            <target>${maven.compiler.target}</target>
            <options>
              <option>-Djava.library.path=${project.build.directory}/lib</option>
            </options>
            <arguments>
              <argument>-Dprism.order=sw</argument>
              <argument>-Dprism.verbose=true</argument>
            </arguments>
          </configuration>
        </plugin>

        <plugin>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-maven-plugin</artifactId>
          <version>0.0.8</version>
          <executions>
            <execution>
              <goals>
                <goal>run</goal>
              </goals>
            </execution>
          </executions>
          <configuration>
            <mainClass>com.StaffSubstitution.app.Main</mainClass> <!-- Your main class -->
            <modulePath>/home/runner/.m2/repository/org/openjfx</modulePath>
            <options>
              <option>--module-path</option>
              <option>/home/runner/.m2/repository/org/openjfx</option>
              <option>--add-modules</option>
              <option>javafx.controls,javafx.fxml</option>
            </options>
            <arguments>
                <argument>-Djava.library.path=/nix/store/054f2j9fdb64gzk0kh33cgffi33x1l8p-altair-4.1.0-fhs/usr/lib64</argument>
               <argument>-Djava.library.path=/nix/store/0c4mrba21hqkn0k8mg262rq2wisjsmiw-openjdk-19.0.2+7/lib/openjdk/lib</argument>

            </arguments>
          </configuration>
        </plugin>
    </plugins>
  </build>
</project>